; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/vcmailbox/extr_vcmailbox.c_mbox_open.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/vcmailbox/extr_vcmailbox.c_mbox_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEVICE_FILE_NAME = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [28 x i8] c"Can't open device file: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [55 x i8] c"Try creating a device file with: sudo mknod %s c %d 0\0A\00", align 1
@MAJOR_NUM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @mbox_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mbox_open() #0 {
  %1 = alloca i32, align 4
  %2 = load i8*, i8** @DEVICE_FILE_NAME, align 8
  %3 = call i32 @open(i8* %2, i32 0)
  store i32 %3, i32* %1, align 4
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load i8*, i8** @DEVICE_FILE_NAME, align 8
  %8 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = load i8*, i8** @DEVICE_FILE_NAME, align 8
  %10 = load i32, i32* @MAJOR_NUM, align 4
  %11 = call i32 (i8*, i8*, ...) @printf(i8* getelementptr inbounds ([55 x i8], [55 x i8]* @.str.1, i64 0, i64 0), i8* %9, i32 %10)
  %12 = call i32 @exit(i32 -1) #3
  unreachable

13:                                               ; preds = %0
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @printf(i8*, i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
